--- a/package.json
+++ b/package.json
@@ -2,11 +2,14 @@
   "name": "navplot_scheduler",
   "version": "0.0.0",
   "devDependencies": {
-    "wrangler": "2.0.28"
+    "wrangler": "2.6.2"
   },
   "private": true,
   "scripts": {
     "start": "wrangler dev",
     "deploy": "wrangler publish"
+  },
+  "dependencies": {
+    "@octokit/rest": "^19.0.5"
   }
 }
