--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "navplot_scheduler",
   "version": "0.0.0",
   "devDependencies": {
-    "wrangler": "2.6.2"
+    "wrangler": "^3.22.5"
   },
   "private": true,
   "scripts": {
